# hyperpanel

./: README.md  angular.json  package.json
configuration/plugins/hyprc/: hyprc.py  utils.py
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: global_vars.rs  main.rs  startup.rs
src-tauri/src/events/: mod.rs  theme_listener.rs
src-tauri/src/services/: mod.rs  run_service.rs  theme_service.rs
src-tauri/src/utils/: mod.rs  read_file.rs  run_command.rs  use_script.rs
src/app/: app.component.html  app.component.ts  app.config.ts  app.routes.ts
src/app/core/components/layout/: layout.component.html  layout.component.scss  layout.component.ts
src/app/core/models/: navlink.ts  theme.ts
src/app/core/modules/theme/: theme.component.html  theme.component.ts
src/app/core/services/theme/: theme.service.ts
src/app/core/services/util/: util.service.ts
src/app/core/styles/: primeng.scss
styles/: buttons.scss  main.scss
