[package]
name = "hyperpanel"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [
  "protocol-all",
  "path-all",
  "fs-all",
  "shell-open",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6.1.1"
prettytable = "0.10.0"
once_cell = "1.8.0"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
